Add Text Comparison

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1 class="display-5">Welcome to Yu Liu's business applicaiton website empowered by machine learning models </h1>
         <p>The purpose of this site is to provide light-weight business applications to help business users swiftly resolve their 
-            everyday business challanges. This is a continuously expending project and currently provides functions 
-            such as Spam Detection and Document Summary. I'd love to hear ideas and feedbacks, please feel free to contact
+            everyday business challenges. This is a continuously expending project and currently provides functions 
+            such as Spam Detection, Text Summary and Text Comparison. I'd love to hear ideas and feedbacks, please do not hesitate to contact
             me.
         </p>
         <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
@@ -30,7 +30,7 @@
             <p><a class="btn btn-secondary" href="/Spam_detect" role="button">Let's Go ! &raquo;</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Document Summary</h2>
+            <h2>Text Summary</h2>
             <p>Everyone hates reading long documents, especially when they are full of jargons. 
                 This app will save you tremendous amount of time understanding your document. The magic is
                 empowered by the industry-recognized SentenceRank algorithm.
@@ -38,9 +38,17 @@
             </p>
             <p><a class="btn btn-secondary" href="/Document Summary" role="button">Let's Go ! &raquo;</a></p>
         </div>
+        <div class="col-md-4">
+            <h2>Text Comparison</h2>
+            <p>Whether it is to detect plagiarism or to avoid redundant readings, this app utilizes the popular 
+                Sentence-BERT model and the classic TF-IDF model to come up with similarity scores between two 
+                text documents for both content and word choices. 
+            <!-- <br/><br/><br/>                        -->
+            </p>
+            <p><a class="btn btn-secondary" href="/Document Compare" role="button">Let's Go ! &raquo;</a></p>
+        </div>
 
     </div>
-
     <hr>
 
     <div class="form"></div> 
