--- a/templates/Summary_main.html
+++ b/templates/Summary_main.html
@@ -13,9 +13,13 @@
     <form action="/Document Summary/Summary_result" method="POST"> 
         <textarea class="form-control" name="content" id="exampleFormControlTextarea1" placeholder="Please enter your super long document here." rows="6" aria-label="SXXh"></textarea>
         <br>
+        Also enter:
+        <br>
         <input type="text" name="rate" id="exampleFormControlTextarea2" placeholder="% of most relevent sentences for summary" size=40 aria-label="SXXh">
-        <br> <br>
-        <input type="text" name="count" id="exampleFormControlTextarea3" placeholder="# of top keywords wish to be extracted" size=40 aria-label="SXXh">
+        <br> 
+        and (if interested)
+        <br> 
+        <input type="text" name="count" id="exampleFormControlTextarea3" placeholder="# of top keywords related to the content" size=40 aria-label="SXXh">
         <br>  <br>  <br> 
 
         <input type="submit" value="Click for Summary">  
