--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,11 @@
                     <a class="nav-link" href="/Spam_detect">Spam Detection</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Document Summary">Document Summary</a>
+                    <a class="nav-link" href="/Document Summary">Text Summary</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Document Compare">Text Comparison</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
